--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="has-background-white-ter">
+<body class="has-background-grey-lighter">
     <!-- Hero Section -->
     <section class="hero is-medium">
         <div class="hero-body">
@@ -48,7 +48,7 @@
                             <img src="org-social-logo.png" alt="Org Social Logo" style="max-height: 200px; width: auto;">
                         </figure>
                     </div>
-                    <div class="column is-7">
+                    <div class="column is-7 has-text-centered-mobile">
                         <h1 class="title is-1 mb-4">
                             Org Social
                         </h1>
@@ -216,7 +216,7 @@ This is my first post on Org Social.</code></pre>
     </section>
 
     <!-- Footer -->
-    <footer class="footer has-background-white-ter">
+    <footer class="footer has-background-grey-lighter">
         <div class="content has-text-centered">
             <p>
                 Org Social. Open Source Project.
